--- a/gazon-service/pom.xml
+++ b/gazon-service/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.gitlab</groupId>
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
