--- a/gazon-service/pom.xml
+++ b/gazon-service/pom.xml
@@ -48,7 +48,19 @@
             <artifactId>hibernate-search-orm</artifactId>
             <version>5.11.8.Final</version>
         </dependency>
-     </dependencies>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
