--- a/gazon-service/src/main/resources/application.yml
+++ b/gazon-service/src/main/resources/application.yml
@@ -36,6 +36,10 @@ spring:
       ddl-auto: validate
     properties:
       hibernate:
+        search:
+          default:
+            directory_provider: filesystem
+            indexBase: src/main/java/com/gitlab/indexFuzzySearch
         dialect: org.hibernate.dialect.PostgreSQLDialect
         storage_engine: innodb
         current_session_context_class: org.springframework.orm.hibernate5.SpringSessionContext
