--- a/gazon-service/pom.xml
+++ b/gazon-service/pom.xml
@@ -59,6 +59,11 @@
             <version>23.0.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.keycloak</groupId>
+            <artifactId>keycloak-spring-security-adapter</artifactId>
+            <version>23.0.1</version>
+        </dependency>
      </dependencies>
 
     <build>
