--- a/gazon-service/pom.xml
+++ b/gazon-service/pom.xml
@@ -49,6 +49,11 @@
             <version>3.1.1</version>
         </dependency>
         <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-search-orm</artifactId>
             <version>5.11.8.Final</version>
